--- a/src/main/webapp/chat/chat.template.html
+++ b/src/main/webapp/chat/chat.template.html
@@ -3,27 +3,31 @@
 </head>
 
 <div>
-<div class="col-md-9" id="panel-body">
-    <div ng-if="isSelectedChat">
-        <div id="messages-container">
-            <div class="list-group" ng-repeat="message in messages">
-                <div class="list-group-item">
+    <div class="col-md-9" id="panel-body">
+        <div ng-if="isSelectedChat">
+            <div id="messages-container">
+                <div class="list-group" ng-repeat="message in messages">
+                    <div class="list-group-item">
 
-                    {{message.user.firstName}} {{message.user.lastName}}:
-                    <p>{{message.body}}</p>
+                        {{message.user.firstName}} {{message.user.lastName}}:
+                        <p>{{message.body}}</p>
 
+                    </div>
                 </div>
+            </div>
+
+            <div id="textarea-container">
+                <textarea id="message-textarea" ng-model="model.newMessage" placeholder="Input message"
+                    ng-keydown="$event.keyCode === 13 && sendMessage()"></textarea>
             </div>
         </div>
 
-        <div id="textarea-container">
-            <textarea id="message-textarea" ng-model="model.newMessage" placeholder="Input message"
-                ng-keydown="$event.keyCode === 13 && sendMessage()"></textarea>
+        <div id="not-selected-chat-message" ng-if="!isSelectedChat">
+            Please select a chat to start messaging
         </div>
     </div>
+</div>
 
-    <div id="not-selected-chat-message" ng-if="!isSelectedChat">
-        Please select a chat to start messaging
-    </div>
-</div>
-</div>
+<script>
+
+</script>
