--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -33,90 +33,88 @@
 <body ng-controller="navbarCtrl">
 
 
-    <nav class="navbar navbar-inverse" id="main-navbar" ng-controller="navbarCtrl">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse">
+<nav class="navbar navbar-inverse" id="main-navbar" ng-controller="navbarCtrl">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse">
 
-                <ul class="nav navbar-nav">
-                    <li><a id="home-button" href="#!/home">Messenger</a></li>
-                </ul>
+            <ul class="nav navbar-nav">
+                <li><a id="home-button" href="#!/home">Messenger</a></li>
+            </ul>
 
-                <form class="navbar-form navbar-left" ng-submit="search()">
-                    <div class="input-group">
-                        <input ng-model="searchParameter" placeholder="Search"
-                               class="form-control search-group" id="search-input">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default search-group" id="search-submit" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
+            <form class="navbar-form navbar-left" ng-submit="search()">
+                <div class="input-group">
+                    <input ng-model="searchParameter" placeholder="Search"
+                           class="form-control search-group" id="search-input">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default search-group" id="search-submit" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
                     </div>
-                </form>
+                </div>
+            </form>
 
-                <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                    <li><a id="friends-button" href="#!/friends">Friends</a></li>
-                </ul>
+            <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                <li><a id="friends-button" href="#!/friends">Friends</a></li>
+            </ul>
 
-                <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                    <li><a id="friend-requests-button" href="#!/friends/requests/incoming">Friend requests
-                        ({{newFriendRequests}})
+            <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                <li><a id="friend-requests-button" href="#!/friends/requests/incoming">Friend requests
+                    ({{newFriendRequests}})
+                </a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                    <li><a href="" ng-click="myProfile()" id="a-user-name">
+                        <span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}
                     </a></li>
-                </ul>
+                </div>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                        <li><a href="" ng-click="myProfile()" id="a-user-name">
-                            <span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}
-                        </a></li>
-                    </div>
-
-                    <div class="nav navbar-nav" id="user-functions-button-panel">
-                        <li ng-if="isAuthority('ROLE_ANONYMOUS')">
-                            <a href="#!/signUp" id="sign-up-button">
-                                <span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up
-                            </a>
-                        </li>
-                        <li ng-if="isAuthority('ROLE_ANONYMOUS')">
-                            <a href="#!/login" id="logout-button">
-                                <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login
-                            </a>
-                        </li>
-                        <li ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                            <a href="" ng-click="logout()" id="login-button">
-                                <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout
-                            </a>
-                        </li>
-                    </div>
-                </ul>
-            </div>
+                <div class="nav navbar-nav" id="user-functions-button-panel">
+                    <li ng-if="isAuthority('ROLE_ANONYMOUS')">
+                        <a href="#!/signUp" id="sign-up-button">
+                            <span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up
+                        </a>
+                    </li>
+                    <li ng-if="isAuthority('ROLE_ANONYMOUS')">
+                        <a href="#!/login" id="logout-button">
+                            <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login
+                        </a>
+                    </li>
+                    <li ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                        <a href="" ng-click="logout()" id="login-button">
+                            <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout
+                        </a>
+                    </li>
+                </div>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <div id="content-panel">
+<div id="content-panel">
 
-        <div class="col-md-3">
-            <div class="list-group" id="chat-list-container" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                <div ng-repeat="chat in chats">
-                    <a href="" class="list-group-item" id="list-group-item">
-                        <div ng-click="openChat(chat)" id="contact-panel">
-                            <img ng-src="data:image/jpeg;base64,{{chat.user.photo}}" class="img-circle" id="chat-user-photo">
-                            <span style="font-weight: bold">
-                                {{chat.user.firstName}} {{chat.user.lastName}}
-                            </span>
-                            <div id="unread-messages-container">
-                                <span class="badge">
-                                    {{chat.unreadMessages}}
-                                </span>
-                            </div>
-                        </div>
-                    </a>
+    <div class="col-md-3">
+        <div id="chat-list-container" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+            <div ng-repeat="chat in chats">
+                <div ng-click="openChat(chat)" id="contact-panel-chat">
+                    <img ng-src="data:image/jpeg;base64,{{chat.user.photo}}" class="img-circle" id="chat-user-photo">
+                    <span style="font-weight: bold">
+                        {{chat.user.firstName}} {{chat.user.lastName}}
+                    </span>
+                    <div id="unread-messages-container">
+                        <span class="badge">
+                            {{chat.unreadMessages}}
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div ng-view></div>
-
     </div>
+
+    <div ng-view></div>
+
+</div>
 
 </body>
 </html>
